examples/asm/TrafficLight-1.0.6/evosuite-warehouse/v004/README.md
# V004
by adding the final state condition we can generate the same scenario generated by EvoMBT-
```
// final state condition
public boolean isFinalState(){
    return
            this.stato >=18 &&
                    this.get_status() ==TrafficLightv2.States.RED;
}
```
## Problems

## How to
```shell
mvn compile
```
```shell
mvn dependency:copy-dependencies -DincludeScope=runtime
```
```shell
java -jar ../../../resources/evosuite-1.0.6.jar -setup target/classes target/dependency/commons-collections-3.2.2.jar
```
```shell
java -jar ../../../resources/evosuite-1.0.6.jar -class org.evoservice.trafficLight.TrafficLightv2_ASM -criterion LINE:BRANCH -Dminimize=true -Dassertion_strategy=all
```
### log
* EvoSuite 1.0.6
* Going to generate test cases for class: org.evoservice.trafficLight.TrafficLightv2_ASM
* Starting client
* Properties loaded from C:\Users\isaac\Documents\GitHub\evosuite-tutorial\examples\asm\TrafficLight-1.0.6\evosuite-files\evosuite.properties
* Connecting to master process on port 7606
* Analyzing classpath:
  - target/classes
  - target/dependency/commons-collections-3.2.2.jar
* Finished analyzing classpath
* Generating tests for class org.evoservice.trafficLight.TrafficLightv2_ASM
* Test criteria:
  - Line Coverage
  - Branch Coverage
* Setting up search algorithm for whole suite generation
* Total number of test goals:
  - Line 46
    [Progress:>                             0%] [Cov:>                                  0%]  - Branch 26
* Using seed 1725867138639
* Starting evolution
  [Progress:==============================100%] [Cov:==================================>98%]
* Search finished after 151s and 1882 generations, 1305737 statements, best individual has fitness: 0.5
* Minimizing test suite
* Going to analyze the coverage criteria
* Coverage analysis for criterion LINE
* Coverage of criterion LINE: 100%
* Total number of goals: 46
* Number of covered goals: 46
* Coverage analysis for criterion BRANCH
* Coverage of criterion BRANCH: 96%
* Total number of goals: 26
* Number of covered goals: 25
* Generated 1 tests with total length 25
* Resulting test suite's coverage: 98% (average coverage for all fitness functions)
* Generating assertions
* Compiling and checking tests
* Writing JUnit test case 'TrafficLightv2_ASM_ESTest' to evosuite-tests
* Done!

* Computation finished

## Scenario
### test0
```
<State 0 (controlled)>
count = 0
status = RED
Set pedestrian = false
</State 0 (controlled)>

<Stato attuale>
count = 1
status = RED
Branch States RED covered
<State 1 (controlled)>
count = 1
status = RED
Set pedestrian = false
</State 1 (controlled)>

<Stato attuale>
count = 2
status = RED
Branch States RED covered
<State 2 (controlled)>
count = 2
status = RED
Set pedestrian = false
</State 2 (controlled)>

<Stato attuale>
count = 3
status = RED
Branch States RED covered
<State 3 (controlled)>
count = 3
status = RED
Set pedestrian = false
</State 3 (controlled)>

<Stato attuale>
count = 4
status = RED
Branch States RED covered
<State 4 (controlled)>
count = 4
status = RED
Set pedestrian = false
</State 4 (controlled)>

<Stato attuale>
count = 5
status = RED
Branch States RED covered
<State 5 (controlled)>
count = 5
status = RED
Set pedestrian = false
</State 5 (controlled)>

<Stato attuale>
count = 6
status = RED
Branch States RED covered
<State 6 (controlled)>
count = 6
status = RED
Set pedestrian = false
</State 6 (controlled)>

<Stato attuale>
count = 0
status = GREEN
Branch States GREEN covered
<State 7 (controlled)>
count = 0
status = GREEN
Set pedestrian = false
</State 7 (controlled)>

<Stato attuale>
count = 1
status = GREEN
Branch States GREEN covered
<State 8 (controlled)>
count = 1
status = GREEN
Set pedestrian = false
</State 8 (controlled)>

<Stato attuale>
count = 2
status = GREEN
Branch States GREEN covered
<State 9 (controlled)>
count = 2
status = GREEN
Set pedestrian = false
</State 9 (controlled)>

<Stato attuale>
count = 3
status = GREEN
Branch States GREEN covered
<State 10 (controlled)>
count = 3
status = GREEN
Set pedestrian = false
</State 10 (controlled)>

<Stato attuale>
count = 4
status = GREEN
Branch States GREEN covered
<State 11 (controlled)>
count = 4
status = GREEN
Set pedestrian = false
</State 11 (controlled)>

<Stato attuale>
count = 5
status = GREEN
Branch States GREEN covered
<State 12 (controlled)>
count = 5
status = GREEN
Set pedestrian = false
</State 12 (controlled)>

<Stato attuale>
count = 6
status = GREEN
Branch States GREEN covered
<State 13 (controlled)>
count = 6
status = GREEN
Set pedestrian = false
</State 13 (controlled)>

<Stato attuale>
count = 0
status = YELLOW
Branch States YELLOW covered
<State 14 (controlled)>
count = 0
status = YELLOW
Set pedestrian = false
</State 14 (controlled)>

<Stato attuale>
count = 1
status = YELLOW
Branch States YELLOW covered
<State 15 (controlled)>
count = 1
status = YELLOW
Set pedestrian = false
</State 15 (controlled)>

<Stato attuale>
count = 0
status = RED
Branch States RED covered
<State 16 (controlled)>
count = 0
status = RED
Set pedestrian = false
</State 16 (controlled)>

<Stato attuale>
count = 1
status = RED
Branch States RED covered
<State 17 (controlled)>
count = 1
status = RED
Set pedestrian = false
</State 17 (controlled)>

<Stato attuale>
count = 2
status = RED
Branch States RED covered
<State 18 (controlled)>
count = 2
status = RED
Set pedestrian = false
</State 18 (controlled)>

<Stato attuale>
count = 3
status = RED
Branch States RED covered

<Stato finale>
<State 18 (controlled)>
count = 3
status = RED
Set pedestrian = false
</State 18 (controlled)>

<Stato attuale>
count = 4
status = RED
Branch States RED covered

<Stato finale>
<State 18 (controlled)>
count = 4
status = RED
Set pedestrian = false
</State 18 (controlled)>

<Stato attuale>
count = 5
status = RED
Branch States RED covered

<Stato finale>
<State 18 (controlled)>
count = 5
status = RED
Set pedestrian = false
</State 18 (controlled)>

<Stato attuale>
count = 6
status = RED
Branch States RED covered

<Stato finale>
<State 18 (controlled)>
count = 6
status = RED
Set pedestrian = false
</State 18 (controlled)>

<Stato attuale>
count = 0
status = GREEN
Branch States GREEN covered
<State 19 (controlled)>
count = 0
status = GREEN
Set pedestrian = true
</State 19 (controlled)>

<Stato attuale>
count = 0
status = PENDING
Branch States PENDING covered
```
#### Avalla
```
```